--- a/Amazon/package.json
+++ b/Amazon/package.json
@@ -7,13 +7,15 @@
     "dev": "vite",
     "build": "vite build",
     "lint": "eslint .",
-    "preview": "vite preview"
+    "preview": "vite preview",
+    "test": "vitest"
   },
   "dependencies": {
     "@emotion/react": "^11.14.0",
     "@emotion/styled": "^11.14.0",
+    "@radix-ui/react-icons": "^1.3.1",
     "@reduxjs/toolkit": "^2.5.0",
-    "@tanstack/react-query": "^5.62.7",
+    "@tanstack/react-query": "^5.63.0",
     "axios": "^1.7.9",
     "clsx": "^2.1.1",
     "dayjs": "^1.11.13",
@@ -27,8 +29,7 @@
     "react-router-dom": "^7.0.2",
     "socket.io-client": "^4.8.1",
     "styled-components": "^6.1.13",
-    "yup": "^1.6.0",
-    "@radix-ui/react-icons": "^1.3.1"
+    "yup": "^1.6.0"
   },
   "devDependencies": {
     "@eslint/js": "^9.15.0",
