--- a/Try2/my-app/package.json
+++ b/Try2/my-app/package.json
@@ -11,6 +11,10 @@
     "test": "vitest"
   },
   "dependencies": {
+    "@capacitor/android": "^6.2.0",
+    "@capacitor/cli": "^6.2.0",
+    "@capacitor/core": "^6.2.0",
+    "@capacitor/ios": "^6.2.0",
     "@emotion/react": "^11.14.0",
     "@emotion/styled": "^11.14.0",
     "@radix-ui/react-icons": "^1.3.2",
@@ -19,6 +23,7 @@
     "axios": "^1.7.9",
     "clsx": "^2.1.1",
     "dayjs": "^1.11.13",
+    "firebase": "^11.1.0",
     "formik": "^2.4.6",
     "framer-motion": "^11.15.0",
     "js-cookie": "^3.0.5",
@@ -27,13 +32,16 @@
     "react-dom": "^18.3.1",
     "react-helmet": "^6.1.0",
     "react-redux": "^9.2.0",
+    "react-responsive": "^10.0.0",
     "react-router-dom": "^7.0.2",
     "socket.io-client": "^4.8.1",
     "styled-components": "^6.1.13",
+    "vite-plugin-pwa": "^0.21.1",
     "yup": "^1.6.0"
   },
   "devDependencies": {
     "@eslint/js": "^9.15.0",
+    "@testing-library/jest-dom": "^6.6.3",
     "@testing-library/react": "^16.1.0",
     "@types/react": "^18.3.17",
     "@types/react-dom": "^18.3.5",
