--- a/Instagram/package.json
+++ b/Instagram/package.json
@@ -15,7 +15,7 @@
     "@emotion/styled": "^11.14.0",
     "@radix-ui/react-icons": "^1.3.1",
     "@reduxjs/toolkit": "^2.5.0",
-    "@tanstack/react-query": "^5.63.0",
+    "@tanstack/react-query": "^5.62.7",
     "axios": "^1.7.9",
     "chalk": "^5.4.1",
     "clsx": "^2.1.1",
@@ -25,12 +25,15 @@
     "lodash": "^4.17.21",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
+    "react-firebase-hooks": "^5.1.1",
     "react-helmet": "^6.1.0",
+    "react-icons": "^4.11.0",
     "react-redux": "^9.2.0",
-    "react-router-dom": "^7.0.2",
+    "react-router-dom": "^6.17.0",
     "socket.io-client": "^4.8.1",
     "styled-components": "^6.1.13",
-    "yup": "^1.6.0"
+    "yup": "^1.6.0",
+    "zustand": "^4.5.6"
   },
   "devDependencies": {
     "@eslint/js": "^9.15.0",
