--- a/Try2/App2/package.json
+++ b/Try2/App2/package.json
@@ -13,9 +13,11 @@
   "dependencies": {
     "@emotion/react": "^11.14.0",
     "@emotion/styled": "^11.14.0",
+    "@radix-ui/react-icons": "^1.3.1",
     "@reduxjs/toolkit": "^2.5.0",
     "@tanstack/react-query": "^5.62.7",
     "axios": "^1.7.9",
+    "chalk": "^5.4.1",
     "clsx": "^2.1.1",
     "dayjs": "^1.11.13",
     "formik": "^2.4.6",
@@ -28,8 +30,7 @@
     "react-router-dom": "^7.0.2",
     "socket.io-client": "^4.8.1",
     "styled-components": "^6.1.13",
-    "yup": "^1.6.0",
-    "@radix-ui/react-icons": "^1.3.1"
+    "yup": "^1.6.0"
   },
   "devDependencies": {
     "@eslint/js": "^9.15.0",
