--- a/Try2/my-app/package.json
+++ b/Try2/my-app/package.json
@@ -21,6 +21,7 @@
     "@reduxjs/toolkit": "^2.5.0",
     "@tanstack/react-query": "^5.62.7",
     "axios": "^1.7.9",
+    "chalk": "^5.4.1",
     "clsx": "^2.1.1",
     "dayjs": "^1.11.13",
     "firebase": "^11.1.0",
