--- a/Amazon/android/gradle/wrapper/gradle-wrapper.properties
+++ b/Amazon/android/gradle/wrapper/gradle-wrapper.properties
@@ -1,7 +1,8 @@
-distributionBase=GRADLE_USER_HOME
-distributionPath=wrapper/dists
-distributionUrl=https\://services.gradle.org/distributions/gradle-8.2.1-all.zip
+#Sat Jan 11 23:22:39 GMT 2025
 networkTimeout=10000
+distributionBase=GRADLE_USER_HOME
+distributionUrl=https\://services.gradle.org/distributions/gradle-8.9-bin.zip
+distributionPath=wrapper/dists
 validateDistributionUrl=true
-zipStoreBase=GRADLE_USER_HOME
 zipStorePath=wrapper/dists
+zipStoreBase=GRADLE_USER_HOME
