--- a/Instagram/package.json
+++ b/Instagram/package.json
@@ -18,21 +18,26 @@
     "@tanstack/react-query": "^5.62.7",
     "axios": "^1.7.9",
     "chalk": "^5.4.1",
+    "cloudinary-react": "^1.8.1",
     "clsx": "^2.1.1",
+    "cropperjs": "^1.6.2",
     "dayjs": "^1.11.13",
     "formik": "^2.4.6",
     "framer-motion": "^11.15.0",
     "lodash": "^4.17.21",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
+    "react-dropzone": "^14.3.5",
     "react-firebase-hooks": "^5.1.1",
     "react-helmet": "^6.1.0",
     "react-icons": "^4.11.0",
     "react-redux": "^9.2.0",
     "react-router-dom": "^6.17.0",
+    "react-toastify": "^11.0.2",
     "socket.io-client": "^4.8.1",
     "styled-components": "^6.1.13",
-    "yup": "^1.6.0",
+    "vite-plugin-pwa": "^0.21.1",
+    "yup": "^1.6.1",
     "zustand": "^4.5.6"
   },
   "devDependencies": {
@@ -50,6 +55,7 @@
     "postcss": "^8.4.49",
     "prettier": "^3.4.2",
     "tailwindcss": "^3.4.16",
-    "vite": "^6.0.3"
+    "vite": "^6.0.3",
+    "workbox-cli": "^7.3.0"
   }
 }
