--- a/Instagram/package.json
+++ b/Instagram/package.json
@@ -16,6 +16,8 @@
     "@radix-ui/react-icons": "^1.3.1",
     "@reduxjs/toolkit": "^2.5.0",
     "@tanstack/react-query": "^5.62.7",
+    "@chakra-ui/icons": "^2.1.1",
+    "@chakra-ui/react": "^2.8.1",
     "axios": "^1.7.9",
     "chalk": "^5.4.1",
     "cloudinary-react": "^1.8.1",
