--- a/Instagram/package.json
+++ b/Instagram/package.json
@@ -11,6 +11,8 @@
     "test": "vitest"
   },
   "dependencies": {
+    "@chakra-ui/icons": "^2.2.4",
+    "@chakra-ui/react": "^3.3.0",
     "@emotion/react": "^11.14.0",
     "@emotion/styled": "^11.14.0",
     "@radix-ui/react-icons": "^1.3.1",
