--- a/Instagram/package.json
+++ b/Instagram/package.json
@@ -11,8 +11,11 @@
     "test": "vitest"
   },
   "dependencies": {
+    "@chakra-ui/hooks": "^2.4.2",
     "@chakra-ui/icons": "^2.2.4",
-    "@chakra-ui/react": "^3.3.0",
+    "@chakra-ui/react": "^3.3.1",
+    "@chakra-ui/theme": "^3.4.6",
+    "@chakra-ui/theme-tools": "^2.2.6",
     "@emotion/react": "^11.14.0",
     "@emotion/styled": "^11.14.0",
     "@radix-ui/react-icons": "^1.3.1",
