--- a/Instagram/package.json
+++ b/Instagram/package.json
@@ -29,7 +29,9 @@
     "dayjs": "^1.11.13",
     "formik": "^2.4.6",
     "framer-motion": "^11.15.0",
+    "glob": "^11.0.1",
     "lodash": "^4.17.21",
+    "patch-package": "^8.0.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-dropzone": "^14.3.5",
