--- a/Instagram/package.json
+++ b/Instagram/package.json
@@ -38,6 +38,7 @@
     "react-firebase-hooks": "^5.1.1",
     "react-helmet": "^6.1.0",
     "react-icons": "^4.11.0",
+    "react-query": "^3.39.3",
     "react-redux": "^9.2.0",
     "react-router-dom": "^6.17.0",
     "react-toastify": "^11.0.2",
