--- a/Instagram/package.json
+++ b/Instagram/package.json
@@ -30,6 +30,7 @@
     "formik": "^2.4.6",
     "framer-motion": "^11.15.0",
     "glob": "^11.0.1",
+    "js-cookie": "^3.0.5",
     "lodash": "^4.17.21",
     "patch-package": "^8.0.0",
     "react": "^18.3.1",
